--- a/tests/Application/src/AppBundle/Resources/config/app/_sylius/sylius_customer.yaml
+++ b/tests/Application/src/AppBundle/Resources/config/app/_sylius/sylius_customer.yaml
@@ -3,3 +3,4 @@ sylius_customer:
         customer:
             classes:
                 model: AppBundle\Model\Customer
+                controller: Setono\SyliusTrustpilotPlugin\Controller\CustomerController
