--- a/.travis.yml
+++ b/.travis.yml
@@ -72,7 +72,8 @@ before_script:
 
 script:
     - composer validate --strict
-    - vendor/bin/phpstan analyse -c phpstan.neon -l max src/
+    - composer analyse
+    - composer check-style
 
 #    - vendor/bin/phpunit
 #    - vendor/bin/phpspec run
