--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,13 @@
 {
     "name": "setono/sylius-trustpilot-plugin",
     "type": "sylius-plugin",
-    "keywords": ["sylius", "sylius-plugin"],
+    "keywords": ["sylius", "sylius-plugin", "trustpilot"],
     "description": "Trustpilot plugin for Sylius.",
     "license": "MIT",
     "require": {
         "php": "^7.2",
 
-        "sylius/sylius": "~1.3.0@dev"
+        "sylius/sylius": "~1.3"
     },
     "require-dev": {
         "behat/behat": "^3.4",
@@ -50,7 +50,15 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "1.3-dev"
+            "dev-master": "1.0-dev"
         }
+    },
+    "config": {
+        "sort-packages": true
+    },
+    "scripts": {
+        "check-style": "./vendor/bin/ecs check src",
+        "fix-style": "./vendor/bin/ecs check src --fix",
+        "analyse": "./vendor/bin/phpstan.phar analyse -c phpstan.neon -l max src/"
     }
 }
