--- a/.travis.yml
+++ b/.travis.yml
@@ -74,9 +74,8 @@ script:
     - composer validate --strict
     - composer analyse
     - composer check-style
+    - composer test
 
-#    - vendor/bin/phpunit
-#    - vendor/bin/phpspec run
 #    - vendor/bin/behat --strict -vvv --no-interaction || vendor/bin/behat --strict -vvv --no-interaction --rerun
 
 after_failure:
