--- a/composer.json
+++ b/composer.json
@@ -57,6 +57,7 @@
         "sort-packages": true
     },
     "scripts": {
+        "test": "./vendor/bin/phpspec run",
         "check-style": "./vendor/bin/ecs check src",
         "fix-style": "./vendor/bin/ecs check src --fix",
         "analyse": "./vendor/bin/phpstan.phar analyse -c phpstan.neon -l max src/"
