--- a/composer.json
+++ b/composer.json
@@ -59,8 +59,8 @@
     "scripts": {
         "checks": "composer check-style && composer test && composer analyse",
         "test": "./vendor/bin/phpspec run",
-        "check-style": "./vendor/bin/ecs check src",
+        "check-style": "./vendor/bin/ecs check src tests/Application/src",
         "fix-style": "./vendor/bin/ecs check src --fix",
-        "analyse": "./vendor/bin/phpstan.phar analyse -c phpstan.neon -l max src/"
+        "analyse": "./vendor/bin/phpstan.phar analyse -c phpstan.neon -l max src tests/Application/src"
     }
 }
