Specified: Valid example trustpilot email at .env.test.dist to work with tests Changed: Trustpilot plugin configuration to default at example app Fixed: Default value at Configuration.php

--- a/tests/Application/.env.test.dist
+++ b/tests/Application/.env.test.dist
@@ -23,5 +23,5 @@ MAILER_URL=null://localhost
 ###< symfony/swiftmailer-bundle ###
 
 ###> setono/sylius-trustpilot-plugin ###
-APP_TRUSTPILOT_EMAIL=EDITME
+APP_TRUSTPILOT_EMAIL=example@trustpilot.com
 ###< setono/sylius-trustpilot-plugin ###
