--- a/composer.json
+++ b/composer.json
@@ -57,8 +57,17 @@
         "sort-packages": true
     },
     "scripts": {
-        "checks": "composer check-style && composer test && composer analyse",
-        "test": "./vendor/bin/phpspec run",
+        "checks": [
+            "composer check-style",
+            "composer test",
+            "composer analyse"
+        ],
+        "test": [
+            "composer phpspec",
+            "composer behat"
+        ],
+        "phpspec": "./vendor/bin/phpspec run",
+        "behat": "./vendor/bin/behat --tags='@setono_sylius_trustpilot' --no-interaction --format=progress",
         "check-style": "./vendor/bin/ecs check src tests/Application/src",
         "fix-style": "./vendor/bin/ecs check src --fix",
         "analyse": "./vendor/bin/phpstan.phar analyse -c phpstan.neon -l max src tests/Application/src"
