--- a/.travis.yml
+++ b/.travis.yml
@@ -74,7 +74,7 @@ script:
     - composer validate --strict
     - composer analyse
     - composer check-style
-    - composer test
+    - composer phpspec
     - vendor/bin/behat --tags="@setono_sylius_trustpilot" --strict -vvv --no-interaction || vendor/bin/behat --tags="@setono_sylius_trustpilot" --strict -vvv --no-interaction --rerun
 
 after_failure:
