Improved: composer.json Removed: `composer test` from `composer checks`
Now to run all checks and tests - use `composer all`.

--- a/composer.json
+++ b/composer.json
@@ -57,9 +57,12 @@
         "sort-packages": true
     },
     "scripts": {
+        "all": [
+            "composer checks",
+            "composer test"
+        ],
         "checks": [
             "composer check-style",
-            "composer test",
             "composer analyse"
         ],
         "test": [
