--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,15 @@
 {
     "name": "setono/sylius-trustpilot-plugin",
     "type": "sylius-plugin",
-    "keywords": ["sylius", "sylius-plugin", "trustpilot"],
     "description": "Trustpilot plugin for Sylius.",
+    "keywords": [
+        "sylius",
+        "sylius-plugin",
+        "trustpilot"
+    ],
     "license": "MIT",
     "require": {
         "php": "^7.2",
-
         "sylius/sylius": "~1.3"
     },
     "require-dev": {
@@ -15,14 +18,15 @@
         "behat/mink-browserkit-driver": "^1.3",
         "behat/mink-extension": "^2.2",
         "behat/mink-selenium2-driver": "^1.3",
+        "ergebnis/composer-normalize": "^2.0",
         "friends-of-behat/context-service-extension": "^1.2",
         "friends-of-behat/cross-container-extension": "^1.1",
-        "friends-of-behat/service-container-extension": "^1.0",
         "friends-of-behat/page-object-extension": "^0.2.0",
+        "friends-of-behat/service-container-extension": "^1.0",
         "friends-of-behat/symfony-extension": "^1.2.1",
         "friends-of-behat/variadic-extension": "^1.1",
         "lakion/mink-debug-extension": "^1.2.3",
-        "phpspec/phpspec": "^5.0",
+        "phpspec/phpspec": "^6.1",
         "phpstan/phpstan-doctrine": "^0.10",
         "phpstan/phpstan-shim": "^0.10",
         "phpstan/phpstan-symfony": "^0.10",
@@ -30,14 +34,21 @@
         "roave/security-advisories": "dev-master",
         "sensiolabs/security-checker": "^6.0",
         "sylius-labs/coding-standard": "^2.0",
-        "symfony/browser-kit": "^3.4|^4.1",
-        "symfony/debug-bundle": "^3.4|^4.1",
-        "symfony/dotenv": "^3.4|^4.1",
-        "symfony/intl": "^3.4|^4.1",
-        "symfony/web-profiler-bundle": "^3.4|^4.1",
-        "symfony/web-server-bundle": "^3.4|^4.1"
+        "symfony/browser-kit": "^3.4 || ^4.1",
+        "symfony/debug-bundle": "^3.4 || ^4.1",
+        "symfony/dotenv": "^3.4 || ^4.1",
+        "symfony/intl": "^3.4 || ^4.1",
+        "symfony/web-profiler-bundle": "^3.4 || ^4.1",
+        "symfony/web-server-bundle": "^3.4 || ^4.1"
     },
-    "prefer-stable": true,
+    "config": {
+        "sort-packages": true
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0-dev"
+        }
+    },
     "autoload": {
         "psr-4": {
             "Setono\\SyliusTrustpilotPlugin\\": "src/",
@@ -49,31 +60,24 @@
             "AppBundle\\": "tests/Application/src/AppBundle/"
         }
     },
-    "extra": {
-        "branch-alias": {
-            "dev-master": "1.0-dev"
-        }
-    },
-    "config": {
-        "sort-packages": true
-    },
+    "prefer-stable": true,
     "scripts": {
         "all": [
             "composer checks",
             "composer test"
         ],
+        "analyse": "./vendor/bin/phpstan.phar analyse -c phpstan.neon -l max src tests/Application/src",
+        "behat": "./vendor/bin/behat --tags='@setono_sylius_trustpilot' --no-interaction --format=progress",
+        "check-style": "./vendor/bin/ecs check src tests/Application/src",
         "checks": [
             "composer check-style",
             "composer analyse"
         ],
+        "fix-style": "./vendor/bin/ecs check src --fix",
+        "phpspec": "./vendor/bin/phpspec run",
         "test": [
             "composer phpspec",
             "composer behat"
-        ],
-        "phpspec": "./vendor/bin/phpspec run",
-        "behat": "./vendor/bin/behat --tags='@setono_sylius_trustpilot' --no-interaction --format=progress",
-        "check-style": "./vendor/bin/ecs check src tests/Application/src",
-        "fix-style": "./vendor/bin/ecs check src --fix",
-        "analyse": "./vendor/bin/phpstan.phar analyse -c phpstan.neon -l max src tests/Application/src"
+        ]
     }
 }
