--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     "license": "MIT",
     "require": {
         "php": "^7.2",
-        "sylius/sylius": "~1.3"
+        "sylius/sylius": "~1.3",
+        "thecodingmachine/safe": "^1.0"
     },
     "require-dev": {
         "behat/behat": "^3.4",
@@ -25,12 +26,14 @@
         "friends-of-behat/service-container-extension": "^1.0",
         "friends-of-behat/symfony-extension": "^1.2.1",
         "friends-of-behat/variadic-extension": "^1.1",
+        "korbeil/phpstan-generic-rules": "^0.2.1",
         "lakion/mink-debug-extension": "^1.2.3",
         "phpspec/phpspec": "^6.1",
-        "phpstan/phpstan-doctrine": "^0.10",
-        "phpstan/phpstan-shim": "^0.10",
-        "phpstan/phpstan-symfony": "^0.10",
-        "phpstan/phpstan-webmozart-assert": "^0.10",
+        "phpstan/extension-installer": "^1.0",
+        "phpstan/phpstan": "^0.12",
+        "phpstan/phpstan-doctrine": "^0.12",
+        "phpstan/phpstan-strict-rules": "^0.12",
+        "phpstan/phpstan-webmozart-assert": "^0.12",
         "roave/security-advisories": "dev-master",
         "sensiolabs/security-checker": "^6.0",
         "sylius-labs/coding-standard": "^2.0",
@@ -39,7 +42,8 @@
         "symfony/dotenv": "^3.4 || ^4.1",
         "symfony/intl": "^3.4 || ^4.1",
         "symfony/web-profiler-bundle": "^3.4 || ^4.1",
-        "symfony/web-server-bundle": "^3.4 || ^4.1"
+        "symfony/web-server-bundle": "^3.4 || ^4.1",
+        "thecodingmachine/phpstan-safe-rule": "^1.0@beta"
     },
     "config": {
         "sort-packages": true
@@ -55,25 +59,20 @@
             "Tests\\Setono\\SyliusTrustpilotPlugin\\": "tests/"
         }
     },
-    "autoload-dev": {
-        "psr-4": {
-            "AppBundle\\": "tests/Application/src/AppBundle/"
-        }
-    },
     "prefer-stable": true,
     "scripts": {
         "all": [
             "composer checks",
             "composer test"
         ],
-        "analyse": "./vendor/bin/phpstan.phar analyse -c phpstan.neon -l max src tests/Application/src",
+        "analyse": "./vendor/bin/phpstan analyse -c phpstan.neon -l max src/",
         "behat": "./vendor/bin/behat --tags='@setono_sylius_trustpilot' --no-interaction --format=progress",
-        "check-style": "./vendor/bin/ecs check src tests/Application/src",
+        "check-style": "./vendor/bin/ecs check src/ tests/Application/Entity/",
         "checks": [
             "composer check-style",
             "composer analyse"
         ],
-        "fix-style": "./vendor/bin/ecs check src --fix",
+        "fix-style": "./vendor/bin/ecs check src/ tests/Application/Entity/ --fix",
         "phpspec": "./vendor/bin/phpspec run",
         "test": [
             "composer phpspec",
