--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.2",
-        "sylius/sylius": "~1.3",
+        "sylius/sylius": "^1.6",
         "thecodingmachine/safe": "^1.0"
     },
     "require-dev": {
@@ -20,11 +20,9 @@
         "behat/mink-extension": "^2.2",
         "behat/mink-selenium2-driver": "^1.3",
         "ergebnis/composer-normalize": "^2.0",
-        "friends-of-behat/context-service-extension": "^1.2",
-        "friends-of-behat/cross-container-extension": "^1.1",
-        "friends-of-behat/page-object-extension": "^0.2.0",
-        "friends-of-behat/service-container-extension": "^1.0",
-        "friends-of-behat/symfony-extension": "^1.2.1",
+        "friends-of-behat/page-object-extension": "^0.3",
+        "friends-of-behat/suite-settings-extension": "^1.0",
+        "friends-of-behat/symfony-extension": "^2.0",
         "friends-of-behat/variadic-extension": "^1.1",
         "korbeil/phpstan-generic-rules": "^0.2.1",
         "lakion/mink-debug-extension": "^1.2.3",
@@ -32,17 +30,17 @@
         "phpstan/extension-installer": "^1.0",
         "phpstan/phpstan": "^0.12",
         "phpstan/phpstan-doctrine": "^0.12",
-        "phpstan/phpstan-strict-rules": "^0.12",
+        "phpstan/phpstan-shim": "^0.12",
         "phpstan/phpstan-webmozart-assert": "^0.12",
         "roave/security-advisories": "dev-master",
         "sensiolabs/security-checker": "^6.0",
-        "sylius-labs/coding-standard": "^2.0",
-        "symfony/browser-kit": "^3.4 || ^4.1",
-        "symfony/debug-bundle": "^3.4 || ^4.1",
-        "symfony/dotenv": "^3.4 || ^4.1",
-        "symfony/intl": "^3.4 || ^4.1",
-        "symfony/web-profiler-bundle": "^3.4 || ^4.1",
-        "symfony/web-server-bundle": "^3.4 || ^4.1",
+        "sylius-labs/coding-standard": "^3.0",
+        "symfony/browser-kit": "^4.4",
+        "symfony/debug-bundle": "^4.4",
+        "symfony/dotenv": "^4.4",
+        "symfony/intl": "^4.4",
+        "symfony/web-profiler-bundle": "^4.4",
+        "symfony/web-server-bundle": "^4.4",
         "thecodingmachine/phpstan-safe-rule": "^1.0@beta"
     },
     "config": {
@@ -66,7 +64,7 @@
             "composer test"
         ],
         "analyse": "./vendor/bin/phpstan analyse -c phpstan.neon -l max src/",
-        "behat": "./vendor/bin/behat --tags='@setono_sylius_trustpilot' --no-interaction --format=progress",
+        "behat": "./vendor/bin/behat --no-interaction --format=progress",
         "check-style": "./vendor/bin/ecs check src/ tests/Application/Entity/",
         "checks": [
             "composer check-style",
