--- a/tests/Behat/Resources/suites/cli/cli.yml
+++ b/tests/Behat/Resources/suites/cli/cli.yml
@@ -1,7 +1,7 @@
 default:
     suites:
         setono_sylius_trustpilot_cli:
-            contexts_services:
+            contexts:
                 - sylius.behat.context.hook.doctrine_orm
                 - sylius.behat.context.hook.email_spool
 
