--- a/tests/Behat/Resources/suites/ui/admin/managing_orders.yml
+++ b/tests/Behat/Resources/suites/ui/admin/managing_orders.yml
@@ -1,7 +1,7 @@
 default:
     suites:
         setono_sylius_trustpilot_managing_orders:
-            contexts_services:
+            contexts:
                 - sylius.behat.context.hook.doctrine_orm
                 - sylius.behat.context.hook.email_spool
 
