--- a/composer.json
+++ b/composer.json
@@ -1,80 +1,60 @@
 {
     "name": "setono/sylius-trustpilot-plugin",
     "type": "sylius-plugin",
+    "keywords": ["sylius", "sylius-plugin", "trustpilot"],
     "description": "Trustpilot plugin for Sylius.",
-    "keywords": [
-        "sylius",
-        "sylius-plugin",
-        "trustpilot"
-    ],
     "license": "MIT",
     "require": {
         "php": "^7.3",
-        "sylius/sylius": "^1.7",
-        "thecodingmachine/safe": "^1.0"
+        "sylius/sylius": "^1.3"
     },
     "require-dev": {
-        "behat/behat": "^3.4",
-        "behat/mink": "^1.7@dev",
-        "behat/mink-browserkit-driver": "^1.3",
-        "behat/mink-extension": "^2.2",
-        "behat/mink-selenium2-driver": "^1.3",
-        "ergebnis/composer-normalize": "^2.0",
-        "friends-of-behat/page-object-extension": "^0.3",
-        "friends-of-behat/suite-settings-extension": "^1.0",
-        "friends-of-behat/symfony-extension": "^2.0",
-        "friends-of-behat/variadic-extension": "^1.1",
-        "korbeil/phpstan-generic-rules": "^0.2.1",
-        "lakion/mink-debug-extension": "^1.2.3",
         "phpspec/phpspec": "^6.1",
-        "phpstan/extension-installer": "^1.0",
-        "phpstan/phpstan": "^0.12",
-        "phpstan/phpstan-doctrine": "^0.12",
-        "phpstan/phpstan-shim": "^0.12",
-        "phpstan/phpstan-webmozart-assert": "^0.12",
         "roave/security-advisories": "dev-master",
-        "sensiolabs/security-checker": "^6.0",
-        "sylius-labs/coding-standard": "^3.0",
-        "symfony/browser-kit": "^4.4",
-        "symfony/debug-bundle": "^4.4",
-        "symfony/dotenv": "^4.4",
-        "symfony/intl": "^4.4",
-        "symfony/web-profiler-bundle": "^4.4",
-        "symfony/web-server-bundle": "^4.4",
-        "thecodingmachine/phpstan-safe-rule": "^1.0@beta"
+        "setono/code-quality-pack": "^1.4.1",
+        "setono/sylius-behat-pack": "^0.1",
+        "symfony/debug-bundle": "^4.4 || ^5.0",
+        "symfony/dotenv": "^4.4 || ^5.0",
+        "symfony/intl": "^4.4 || ^5.0",
+        "symfony/web-profiler-bundle": "^4.4 || ^5.0"
     },
-    "config": {
-        "sort-packages": true
+    "prefer-stable": true,
+    "autoload": {
+        "psr-4": {
+            "Setono\\SyliusTrustpilotPlugin\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "AppBundle\\": "tests/Application/src/AppBundle/",
+            "Tests\\Setono\\SyliusTrustpilotPlugin\\": "tests/"
+        }
     },
     "extra": {
         "branch-alias": {
             "dev-master": "1.0-dev"
         }
     },
-    "autoload": {
-        "psr-4": {
-            "Setono\\SyliusTrustpilotPlugin\\": "src/",
-            "Tests\\Setono\\SyliusTrustpilotPlugin\\": "tests/"
-        }
+    "config": {
+        "sort-packages": true
     },
-    "prefer-stable": true,
     "scripts": {
         "all": [
             "composer checks",
             "composer test"
         ],
-        "analyse": "./vendor/bin/phpstan analyse -c phpstan.neon -l max src/",
-        "behat": "./vendor/bin/behat --no-interaction --format=progress",
-        "check-style": "./vendor/bin/ecs check src/ tests/Application/Entity/",
         "checks": [
             "composer check-style",
             "composer analyse"
         ],
-        "fix-style": "./vendor/bin/ecs check src/ tests/Application/Entity/ --fix",
-        "phpspec": "./vendor/bin/phpspec run",
         "test": [
             "composer phpspec",
             "composer behat"
-        ]
+        ],
+        "phpspec": "vendor/bin/phpspec run",
+        "behat": "vendor/bin/behat --tags='@setono_sylius_trustpilot' --no-interaction --format=progress",
+        "check-style": "vendor/bin/ecs check src tests/Application/src",
+        "fix-style": "vendor/bin/ecs check src --fix",
+        "analyse": "vendor/bin/phpstan.phar analyse -c phpstan.neon -l max src tests/Application/src"
     }
 }
