Fix phpstan error

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -5,4 +5,8 @@ parameters:
     treatPhpDocTypesAsCertain: false
 
     excludes_analyse:
-        - src/DependencyInjection/Configuration.php
+        # Makes PHPStan crash
+        - 'src/DependencyInjection/Configuration.php'
+
+    ignoreErrors:
+        - '/Parameter \#1 \$configuration of method Symfony\\Component\\DependencyInjection\\Extension\\Extension\:\:processConfiguration\(\) expects Symfony\\Component\\Config\\Definition\\ConfigurationInterface, Symfony\\Component\\Config\\Definition\\ConfigurationInterface\|null given\./'
