--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -45,7 +45,5 @@ jobs:
                 run: |
                     (cd tests/Application && bin/console doctrine:database:create -vvv)
                     (cd tests/Application && bin/console doctrine:schema:create -vvv)
-                    (cd tests/Application && bin/console assets:install public -vvv)
-                    (cd tests/Application && bin/console cache:warmup -vvv)
-            -   name: Run phpunit
-                run: composer phpunit
+            -   name: Run behat
+                run: vendor/bin/behat --strict -vvv --no-interaction || vendor/bin/behat --strict -vvv --no-interaction --rerun
