--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,9 @@
     "license": "MIT",
     "require": {
         "php": "^7.3",
-        "sylius/sylius": "^1.3"
+        "sylius/sylius": "^1.3",
+        "symfony/config": "^4.4 || 5.0",
+        "thecodingmachine/safe": "^1.1"
     },
     "require-dev": {
         "phpspec/phpspec": "^6.1",
