--- a/phpstan.neon
+++ b/phpstan.neon
@@ -10,3 +10,4 @@ parameters:
 
     ignoreErrors:
         - '/Parameter \#1 \$configuration of method Symfony\\Component\\DependencyInjection\\Extension\\Extension\:\:processConfiguration\(\) expects Symfony\\Component\\Config\\Definition\\ConfigurationInterface, Symfony\\Component\\Config\\Definition\\ConfigurationInterface\|null given\./'
+        - '/Call to function assert\(\) with bool will always evaluate to true\./'
