--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,12 @@
 {
     "name": "setono/sylius-trustpilot-plugin",
     "type": "sylius-plugin",
-    "keywords": ["sylius", "sylius-plugin", "trustpilot"],
     "description": "Trustpilot plugin for Sylius.",
+    "keywords": [
+        "sylius",
+        "sylius-plugin",
+        "trustpilot"
+    ],
     "license": "MIT",
     "require": {
         "php": "^7.3",
@@ -20,7 +24,14 @@
         "symfony/intl": "^4.4 || ^5.0",
         "symfony/web-profiler-bundle": "^4.4 || ^5.0"
     },
-    "prefer-stable": true,
+    "config": {
+        "sort-packages": true
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0-dev"
+        }
+    },
     "autoload": {
         "psr-4": {
             "Setono\\SyliusTrustpilotPlugin\\": "src/"
@@ -32,31 +43,24 @@
             "Tests\\Setono\\SyliusTrustpilotPlugin\\": "tests/"
         }
     },
-    "extra": {
-        "branch-alias": {
-            "dev-master": "1.0-dev"
-        }
-    },
-    "config": {
-        "sort-packages": true
-    },
+    "prefer-stable": true,
     "scripts": {
         "all": [
             "composer checks",
             "composer test"
         ],
+        "analyse": "vendor/bin/phpstan.phar analyse -c phpstan.neon -l max src tests/Application/src",
+        "behat": "vendor/bin/behat --tags='@setono_sylius_trustpilot' --no-interaction --format=progress",
+        "check-style": "vendor/bin/ecs check src tests/Application/src",
         "checks": [
             "composer check-style",
             "composer analyse"
         ],
+        "fix-style": "vendor/bin/ecs check src --fix",
+        "phpspec": "vendor/bin/phpspec run",
         "test": [
             "composer phpspec",
             "composer behat"
-        ],
-        "phpspec": "vendor/bin/phpspec run",
-        "behat": "vendor/bin/behat --tags='@setono_sylius_trustpilot' --no-interaction --format=progress",
-        "check-style": "vendor/bin/ecs check src tests/Application/src",
-        "fix-style": "vendor/bin/ecs check src --fix",
-        "analyse": "vendor/bin/phpstan.phar analyse -c phpstan.neon -l max src tests/Application/src"
+        ]
     }
 }
