--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.3",
+        "php": ">=7.3",
         "sylius/sylius": "^1.3",
         "symfony/config": "^4.4 || 5.0",
         "thecodingmachine/safe": "^1.1"
