--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "require": {
         "php": ">=7.3",
         "sylius/sylius": "^1.3",
-        "symfony/config": "^4.4 || 5.0",
+        "symfony/config": "^4.4 || ^5.0",
         "thecodingmachine/safe": "^1.1"
     },
     "require-dev": {
