--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,13 @@
 {
     "name": "setono/sylius-trustpilot-plugin",
-    "type": "sylius-plugin",
     "description": "Trustpilot plugin for Sylius.",
+    "license": "MIT",
+    "type": "sylius-plugin",
     "keywords": [
         "sylius",
         "sylius-plugin",
         "trustpilot"
     ],
-    "license": "MIT",
     "require": {
         "php": ">=7.4",
         "sylius/sylius": "^1.3",
@@ -24,14 +24,7 @@
         "symfony/intl": "^4.4 || ^5.0",
         "symfony/web-profiler-bundle": "^4.4 || ^5.0"
     },
-    "config": {
-        "sort-packages": true
-    },
-    "extra": {
-        "branch-alias": {
-            "dev-master": "1.2-dev"
-        }
-    },
+    "prefer-stable": true,
     "autoload": {
         "psr-4": {
             "Setono\\SyliusTrustpilotPlugin\\": "src/"
@@ -43,7 +36,20 @@
             "Tests\\Setono\\SyliusTrustpilotPlugin\\": "tests/"
         }
     },
-    "prefer-stable": true,
+    "config": {
+        "allow-plugins": {
+            "dealerdirect/phpcodesniffer-composer-installer": false,
+            "ergebnis/composer-normalize": true,
+            "phpstan/extension-installer": true,
+            "symfony/thanks": true
+        },
+        "sort-packages": true
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.2-dev"
+        }
+    },
     "scripts": {
         "all": [
             "composer checks",
