--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     ],
     "require": {
         "php": ">=7.4",
+        "sylius/resource-bundle": "^1.8",
         "sylius/sylius": "^1.3",
         "symfony/config": "^4.4 || ^5.0",
         "thecodingmachine/safe": "^1.1"
