--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,18 +3,10 @@
 version: 2
 
 updates:
-    - commit-message:
-          include: "scope"
-          prefix: "composer"
-      directory: "/"
-      package-ecosystem: "composer"
-      schedule:
-          interval: "daily"
-
-    - commit-message:
-          include: "scope"
-          prefix: "github-actions"
-      directory: "/"
-      package-ecosystem: "github-actions"
-      schedule:
-          interval: "daily"
+    -   commit-message:
+            include: "scope"
+            prefix: "composer"
+        directory: "/"
+        package-ecosystem: "composer"
+        schedule:
+            interval: "weekly"
