--- a/composer.json
+++ b/composer.json
@@ -10,20 +10,37 @@
     ],
     "require": {
         "php": ">=7.4",
+        "doctrine/orm": "^2.13",
+        "psr/log": "^1.1 || ^2.0 || ^3.0",
         "sylius/resource-bundle": "^1.8",
-        "sylius/sylius": "^1.3",
-        "symfony/config": "^4.4 || ^5.0",
-        "thecodingmachine/safe": "^1.1"
+        "symfony/config": "^4.4 || ^5.4 || ^6.0",
+        "symfony/console": "^4.4 || ^5.4 || ^6.0",
+        "symfony/dependency-injection": "^4.4 || ^5.4 || ^6.0",
+        "symfony/http-foundation": "^4.4 || ^5.4 || ^6.0",
+        "symfony/options-resolver": "^4.4 || ^5.4 || ^6.0",
+        "webmozart/assert": "^1.11"
     },
     "require-dev": {
-        "phpspec/phpspec": "^6.1",
+        "api-platform/core": "^2.6",
+        "friendsofsymfony/oauth-server-bundle": ">2.0.0-alpha.0 ^2.0@dev",
+        "lexik/jwt-authentication-bundle": "^2.15",
+        "phpspec/phpspec": "^7.2",
+        "phpunit/phpunit": "^9.5",
+        "polishsymfonycommunity/symfony-mocker-container": "^1.0",
+        "psalm/plugin-phpunit": "^0.17.0",
+        "psalm/plugin-symfony": "^3.1",
         "roave/security-advisories": "dev-latest",
-        "setono/code-quality-pack": "^1.4.1",
-        "setono/sylius-behat-pack": "^0.1",
-        "symfony/debug-bundle": "^4.4 || ^5.0",
-        "symfony/dotenv": "^4.4 || ^5.0",
-        "symfony/intl": "^4.4 || ^5.0",
-        "symfony/web-profiler-bundle": "^4.4 || ^5.0"
+        "setono/code-quality-pack": "^2.2",
+        "setono/sylius-behat-pack": "^0.2",
+        "sylius/admin-api-bundle": "^1.11",
+        "sylius/sylius": "~1.10.14",
+        "symfony/debug-bundle": "^4.4 || ^5.4 || ^6.0",
+        "symfony/dotenv": "^4.4 || ^5.4 || ^6.0",
+        "symfony/intl": "^4.4 || ^5.4 || ^6.0",
+        "symfony/property-info": "^4.4 || ^5.4 || ^6.0",
+        "symfony/serializer": "^4.4 || ^5.4 || ^6.0",
+        "symfony/web-profiler-bundle": "^4.4 || ^5.4 || ^6.0",
+        "symfony/webpack-encore-bundle": "^1.14"
     },
     "prefer-stable": true,
     "autoload": {
@@ -41,30 +58,25 @@
         "allow-plugins": {
             "dealerdirect/phpcodesniffer-composer-installer": false,
             "ergebnis/composer-normalize": true,
-            "phpstan/extension-installer": true,
-            "symfony/thanks": true
+            "symfony/thanks": false
         },
         "sort-packages": true
     },
-    "extra": {
-        "branch-alias": {
-            "dev-master": "1.2-dev"
-        }
-    },
     "scripts": {
-        "all": [
-            "composer checks",
-            "composer test"
+        "analyse": [
+            "@ensure-test-container-exists",
+            "psalm"
         ],
-        "analyse": "vendor/bin/phpstan.phar analyse -c phpstan.neon -l max src tests/Application/src",
         "behat": "vendor/bin/behat --tags='@setono_sylius_trustpilot' --no-interaction --format=progress",
-        "check-style": "vendor/bin/ecs check src tests/Application/src",
+        "check-style": "ecs check",
         "checks": [
             "composer check-style",
             "composer analyse"
         ],
-        "fix-style": "vendor/bin/ecs check src --fix",
-        "phpspec": "vendor/bin/phpspec run",
+        "ensure-test-container-exists": "[[ -f tests/Application/var/cache/test/Tests_Setono_SyliusTrustpilotPlugin_Application_KernelTestDebugContainer.xml ]] || tests/Application/bin/console cache:warmup --env=test",
+        "fix-style": "ecs check --fix",
+        "phpspec": "phpspec run",
+        "phpunit": "phpunit",
         "test": [
             "composer phpspec",
             "composer behat"
