--- a/tests/Application/config/packages/setono_sylius_trustpilot.yaml
+++ b/tests/Application/config/packages/setono_sylius_trustpilot.yaml
@@ -1,2 +1,5 @@
 imports:
     - { resource: "@SetonoSyliusTrustpilotPlugin/Resources/config/app/config.yaml" }
+
+setono_sylius_trustpilot:
+    prune_older_than: 7200
