Make the send delay much more user friendly

--- a/src/Resources/config/grids/setono_sylius_trustpilot_admin_channel_configuration.yaml
+++ b/src/Resources/config/grids/setono_sylius_trustpilot_admin_channel_configuration.yaml
@@ -17,8 +17,10 @@ sylius_grid:
                     type: string
                     label: setono_sylius_trustpilot.ui.afs_email
                 sendDelay:
-                    type: string
+                    type: twig
                     label: setono_sylius_trustpilot.ui.send_delay
+                    options:
+                        template: "@SetonoSyliusTrustpilotPlugin/admin/grid/label/send_delay.html.twig"
                 preferredSendTime:
                     type: string
                     label: setono_sylius_trustpilot.ui.preferred_send_time
